--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,5 +1,5 @@
  # deploy to app engine
-  - name: 'gcr.io/cloud-builders/gcloud'
+   name: 'gcr.io/cloud-builders/gcloud'
     args:
       - 'app'
       - 'deploy'
