--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,4 +1,10 @@
-steps: 
+steps:
+# install npm dependencies
+  - name: node
+    entrypoint: npm
+    args:
+      - 'install'
+       
  # deploy to app engine
   - name: 'gcr.io/cloud-builders/gcloud'
     args:
