--- a/app.yaml
+++ b/app.yaml
@@ -1,5 +1,5 @@
 runtime: nodejs16
-service: default
+service: covidfrontend
 handlers:
 # Serve all static files with url ending with a file extension
 - url: /(.*\..+)$
